@startuml QuestMaster - Diagramme de Classe

hide methods
hide stereotypes
hide circle

skinparam linetype ortho
skinparam classBorderColor #6B21A8
skinparam classBackgroundColor #FAFAFA
skinparam classArrowColor #444444
skinparam classFontSize 13
skinparam classFontName Arial
skinparam classAttributeFontSize 12
skinparam ArrowFontSize 11
skinparam ArrowFontColor #444444
skinparam padding 5
skinparam classHeaderBackgroundColor #6B21A8
skinparam classFontColor #FFFFFF

class users {
  id : bigint
  --
  name : varchar(255)
  email : varchar(255)
  email_verified_at : timestamp
  password : varchar(255)
  two_factor_secret : text
  two_factor_recovery_codes : text
  remember_token : varchar(100)
  created_at : timestamp
  updated_at : timestamp
}

class conversations {
  id : bigint
  user_id : bigint
  agent_id : bigint NULL
  --
  title : varchar(255)
  model : varchar(100)
  total_tokens : integer
  created_at : timestamp
  updated_at : timestamp
}

class messages {
  id : bigint
  conversation_id : bigint
  --
  role : enum('user','assistant')
  content : longtext
  model_used : varchar(100)
  tokens_used : integer
  created_at : timestamp
  updated_at : timestamp
}

class custom_instructions {
  id : bigint
  user_id : bigint
  --
  persona : text
  context : text
  response_style : text
  language : varchar(10)
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

class agents {
  id : bigint
  user_id : bigint
  --
  name : varchar(255)
  emoji : varchar(10)
  persona : text
  context : text
  response_style : text
  language : varchar(10)
  model : varchar(100)
  is_default : boolean
  created_at : timestamp
  updated_at : timestamp
}

class message_files {
  id : bigint
  message_id : bigint
  --
  filename : varchar(255)
  path : varchar(255)
  mime_type : varchar(100)
  type : enum('image','document')
  created_at : timestamp
  updated_at : timestamp
}

class user_model_usage {
  id : bigint
  user_id : bigint
  --
  model : varchar(100)
  total_messages : integer
  total_tokens : integer
  usage_date : date
  created_at : timestamp
  updated_at : timestamp
  UNIQUE(user_id, model, usage_date)
}

class conversation_members {
  id : bigint
  conversation_id : bigint
  user_id : bigint
  --
  role : enum('owner','member')
  joined_at : timestamp
  created_at : timestamp
  updated_at : timestamp
  UNIQUE(conversation_id, user_id)
}

' Relations
users "1" --> "0..*" conversations : possede >
users "1" --> "0..1" custom_instructions : configure >
users "1" --> "0..*" agents : cree >
users "1" --> "0..*" user_model_usage : utilise >
users "1" --> "0..*" conversation_members : partage via >

conversations "1" --> "0..*" messages : contient >
conversations "1" --> "0..*" conversation_members : partage avec >

messages "1" --> "0..*" message_files : attache >

agents "1" --> "0..*" conversations : guide >

note bottom of conversation_members
  Table pivot pour le partage
  de conversations entre utilisateurs
end note

note right of user_model_usage
  Cle unique composite :
  (user_id, model, usage_date)
end note

@enduml
